@@ -30,6 +30,7 @@
 	background-image: url('%webroot%/core/img/loading.gif');
 	background-position: center;
 	background-repeat: no-repeat;
+	background-size: 18px;
 	display: block;
 	height: 100%;
 }
@@ -44,6 +45,26 @@
 	display: none;
 }
 
+
+.pull-refresh {
+	-webkit-transition: height 0.5s;
+	-moz-transition: height 0.5s;
+	transition: height 0.5s;
+	background-image: url('%webroot%/core/img/loading.gif'), linear-gradient(top, rgb(235,235,235) 0%, rgb(248,248,248) 100%);
+	background-image: url('%webroot%/core/img/loading.gif'), -o-linear-gradient(top, rgb(235,235,235) 0%, rgb(248,248,248) 100%);
+	background-image: url('%webroot%/core/img/loading.gif'), -moz-linear-gradient(top, rgb(235,235,235) 0%, rgb(248,248,248) 100%);
+	background-image: url('%webroot%/core/img/loading.gif'), -webkit-linear-gradient(top, rgb(235,235,235) 0%, rgb(248,248,248) 100%);
+	background-image: url('%webroot%/core/img/loading.gif'), -ms-linear-gradient(top, rgb(235,235,235) 0%, rgb(248,248,248) 100%);
+	background-position: center 45px, center;
+	background-repeat: no-repeat;
+	background-size: 18px, 100%;
+	height: 0;
+	width: 100%;
+}
+
+.refresh {
+	height: 80px;
+}
 
 /**
  * Rules for a single feed item
